--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -35,5 +36,5 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
-  "proxy":  "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
